Bug 1726663 - Don't restrict fallback painting to the building rect, since it can be incorrect and is going to be removed soon. r=miko

Differential Revision: https://phabricator.services.mozilla.com/D125002